z-index issue fixed

--- a/styles/HomePage.module.scss
+++ b/styles/HomePage.module.scss
@@ -46,7 +46,7 @@
     
 }
 .btncontainer{
-    z-index: 99999;
+    z-index: 1;
     margin: 10px 0px;
 }
 .startbtn{
