--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -1,4 +1,5 @@
 .navcontainer{
+  z-index: 99999;
     background-color: #092031 !important;
     background:
     linear-gradient(270deg, #6298E9 7.81%, #2EE48D 100%)
